--- a/podcast-app/src/Styles/Navbar.css
+++ b/podcast-app/src/Styles/Navbar.css
@@ -2,6 +2,9 @@
   background-color: darkgrey;
   padding: 1%;
   box-shadow: 0 2px 4px rgba(7, 136, 119, 0.5);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar-brand {
@@ -12,15 +15,15 @@
 
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-evenly;
   padding-right: 5%;
-  overflow-x:inherit;
-
 }
 
-.title {
-    padding-right: 69%;
+.logo {
+    display: flex;
+    align-items:center;
 }
+
 
 .nav-item {
    list-style: none; 
