--- a/podcast-app/src/Styles/index.css
+++ b/podcast-app/src/Styles/index.css
@@ -31,8 +31,14 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 5.2em;
   line-height: 1.1;
+}
+
+p {
+font-size:medium;
+font-style: italic;
+
 }
 
 button {
