--- a/podcast-app/src/Styles/CardList.css
+++ b/podcast-app/src/Styles/CardList.css
@@ -4,15 +4,20 @@
   /* background-color: rgb(242, 22, 22); */
   flex-wrap: wrap;
   overflow-x: scroll;
-  width: 1300px;
+  width: 1100px;
   padding-left: 5%;
+}
+
+.card--images {
+    padding: 5%;
+    padding-left: 8%;
 }
 
 .cards {
   display: inline-block;
   /* border: 3px solid black; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
-  width: 400px;
+  width: 300px;
   height: 550px;
   font-size: 15px;
   flex: 0 0 auto;
