--- a/podcast-app/src/Styles/CardList.css
+++ b/podcast-app/src/Styles/CardList.css
@@ -16,21 +16,16 @@
  max-width: ;
 } */
 
-.side-bar {
-  width: 250px;
-  padding: 16px;
-  background-color: #f0f0f0;
-  display: flex;
-  flex-direction: column;
-}
+
+
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 15px;
-  background-color: rgb(242, 22, 22);
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 30px;
+  background-color: #c3bef0;
   overflow-x: scroll;
-  max-width: 1100px;
+  width: 1300px;
   padding: 5%;
   margin: 0 auto;
 }
@@ -55,7 +50,6 @@
   color: #fff;
 }
 
-
 /* Updated styles for Card */
 .cards {
   /* border: 3px solid black; */
@@ -63,13 +57,12 @@
   font-size: 15px;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: scroll;
   overflow-y: auto;
   padding: 5px;
   word-wrap: break-word;
   background-color: #fff;
-  max-width: 250px;
-  margin: 10px;
+  width: 400px;
   max-height: 80%;
 }
 
