--- a/podcast-app/src/Styles/Footer.css
+++ b/podcast-app/src/Styles/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+    box-shadow: 0 2px 4px #cca8e9;
     text-align: center;
     font-weight: bolder;
     font-style: italic;
