--- a/podcast-app/src/Styles/Navbar.css
+++ b/podcast-app/src/Styles/Navbar.css
@@ -34,9 +34,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: #defcf9;
   padding: 10px;
 }
+
+
+
+
 
 .nav-left {
   display: flex;
