--- a/podcast-app/src/Styles/CardList.css
+++ b/podcast-app/src/Styles/CardList.css
@@ -1,33 +1,11 @@
-/* Updated styles for CardList */
-/* .grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 25px;
-  background-color: rgb(242, 22, 22);
-  overflow-x: scroll;
-  max-width: 1100px;
-  padding-left: 5%;
-  margin: 0 auto;
-} */
-
-/* CardList.css */
-
-/* .main-container {
- max-width: ;
-} */
-
-
-
-
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 30px;
   background-color: #c3bef0;
   overflow-x: scroll;
-  width: 1300px;
+  width: 1200px;
   padding: 5%;
-  margin: 0 auto;
 }
 
 .genre-filter {
@@ -52,18 +30,16 @@
 
 /* Updated styles for Card */
 .cards {
-  /* border: 3px solid black; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
   font-size: 15px;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  overflow-y: auto;
   padding: 5px;
-  word-wrap: break-word;
+  word-wrap: inherit;
   background-color: #fff;
-  width: 400px;
-  max-height: 80%;
+  max-height: 550px;
+  object-fit: scale-down;
 }
 
 .card--images {
