--- a/podcast-app/src/Styles/Hero.css
+++ b/podcast-app/src/Styles/Hero.css
@@ -1,10 +1,12 @@
 .hero-section {
     position:relative;
     overflow: hidden;
+    background-color: antiquewhite;
+    margin-top: 3%;
   }
   .carousel-container {
     display: flex;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 8s ease-in-out;
   }
   .show-info {
     display: flex;
