--- a/podcast-app/src/Styles/index.css
+++ b/podcast-app/src/Styles/index.css
@@ -41,6 +41,10 @@ font-style: italic;
 
 }
 
+.app {
+  background-color: brown;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
