--- a/podcast-app/src/Styles/CardList.css
+++ b/podcast-app/src/Styles/CardList.css
@@ -52,13 +52,9 @@
 .sort-buttons {
   display: flex;
   justify-content: space-evenly;
-  gap: 0.5rem;
-} */
+  /* gap: 0.5rem; */
+} 
 
-.sort-buttons {
-  display: flex;
-  justify-content: space-evenly;
-  gap: 0.5rem;}
 
  .cards {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
