--- a/podcast-app/src/Styles/Navbar.css
+++ b/podcast-app/src/Styles/Navbar.css
@@ -1,24 +1,28 @@
  .navbar {
   display: flex;
-  justify-content: space-between;
+ 
   align-items: center;
   background-color: #defcf9;
   padding: 10px;
  }
 
-
-
-
+ 
+.home {
+  padding-right:20%;
+}
 
 .nav-left {
   display: flex;
+  flex-direction:column;
   align-items: center;
 }
 
 .nav-center {
+  flex-grow: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction:row;
   align-items: center;
+  justify-content: center;
 }
 
 .nav-link {
